fixed converting language properties files from UTF-8 to ASCII The native2ascii task was skipping the files because the resources task has already copied them.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3486 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -273,14 +273,15 @@
         <copy todir="${resources}">
            <fileset dir="${sc.basedir}/resources">
                 <include name="**/*"/>
+		<exclude name="**/languages/**"/>
            </fileset>
         </copy>
     </target>
 
     <target name="native2ascii">
         <!-- internal target -
-             convert property file encoding from UTF-8 to ASCII,
-             save converted files in ${dest} dir -->
+             convert language property files encoding from UTF-8 to ASCII,
+             save converted files in ${resources}/languages dir -->
         <native2ascii
             src="${sc.basedir}/resources/languages"
             dest="${resources}/languages"
