The defaul felix launcher is replaced by the SIP Communicator launcher, which will check the java version before starting the application and will show the appropriate message for the requirements.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3497 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -481,7 +481,7 @@
         description="Starts felix and runs sip-comunicator gui (use latest build).">
 
          <!-- forking prevents from debugging -->
-        <java classname="org.apache.felix.main.Main"
+        <java classname="net.java.sip.communicator.launcher.SIPCommunicator"
             fork="true"
             failonerror="true"
             classpathref="project.class.path">
