--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -515,8 +515,8 @@
     </exec>
 
     <mkdir dir="${debian.dir}"/>
-        <move todir="${debian.dir}">
-        <fileset dir="${resources}">
+    <move todir="${debian.dir}">
+        <fileset dir="${sc.basedir}/resources">
             <include name="${package.name}*"/>
         </fileset>
     </move>
