--- a/build.xml
+++ b/build.xml
@@ -616,7 +616,8 @@
         bundle-pluginmanager,bundle-notification,
         bundle-ssh,bundle-plugin-sshaccregwizz,
         bundle-contacteventhandler,bundle-plugin-contactinfo,
-        bundle-plugin-accountinfo,bundle-plugin-chatalerter"/>
+        bundle-plugin-accountinfo,bundle-plugin-chatalerter,
+        bundle-updatecheckplugin"/>
 
     <!--BUNDLE-HISTORY-->
     <target name="bundle-history">
@@ -1608,4 +1609,18 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources/languages/plugin/accountinfo"/>
         </jar>
     </target>
+    
+    <!--BUNDLE-UpdateCheckPlugin-->
+    <target name="bundle-updatecheckplugin">
+        <jar compress="false" destfile="${bundles.dest}/updatechecker.jar"
+            manifest="src/net/java/sip/communicator/plugin/updatechecker/updatecheck.manifest.mf">
+            <zipfileset dir="classes/net/java/sip/communicator/plugin/updatechecker"
+                prefix="net/java/sip/communicator/plugin/updatechecker" />
+            <zipfileset dir="${resources}/config" includes="updatecheck.properties"
+                prefix="resources/config" />
+            <zipfileset dir="${resources}/languages/plugin/updatechecker"
+                prefix="resources/languages/plugin/updatechecker"/>
+        </jar>
+    </target>
+    
 </project>
