Stop the updater check from building and starting
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3515 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -616,8 +616,7 @@
         bundle-pluginmanager,bundle-notification,
         bundle-ssh,bundle-plugin-sshaccregwizz,
         bundle-contacteventhandler,bundle-plugin-contactinfo,
-        bundle-plugin-accountinfo,bundle-plugin-chatalerter,
-        bundle-updatecheckplugin"/>
+        bundle-plugin-accountinfo,bundle-plugin-chatalerter"/>
 
     <!--BUNDLE-HISTORY-->
     <target name="bundle-history">
