new image added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3531 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/utils/images.properties
+++ b/src/net/java/sip/communicator/impl/gui/utils/images.properties
@@ -7,6 +7,7 @@ QUICK_MENU_INFO_ICON=resources/images/impl/gui/buttons/infoIcon.png
 QUICK_MENU_BUTTON_BG=resources/images/impl/gui/buttons/quickMenuButtonBg.png
 QUICK_MENU_BUTTON_ROLLOVER_BG=resources/images/impl/gui/buttons/quickMenuButtonRolloverBg.png
 QUICK_MENU_SHOW_OFFLINE_ICON=resources/images/impl/gui/buttons/showOffline.png
+QUICK_MENU_HIDE_OFFLINE_ICON=resources/images/impl/gui/buttons/hideOffline.png
 QUICK_MENU_SOUND_ON_ICON=resources/images/impl/gui/buttons/soundOn.png
 QUICK_MENU_SOUND_OFF_ICON=resources/images/impl/gui/buttons/soundOff.png
 
