Change - does not filter exe file in windows build installation task
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3538 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -231,9 +231,16 @@
             filtering="yes" 
         />
 
+        <!-- Copy with replacing some parameters in text files -->
         <copy todir="${windows.app.dir}/tmp" filtering="yes">
             <fileset dir="${inst.resrc}/windows">
                 <include name="launcher.ini"/>
+            </fileset>
+        </copy>
+        
+        <!-- Copy other needed files to tmp folder -->
+        <copy todir="${windows.app.dir}/tmp">
+            <fileset dir="${inst.resrc}/windows">
                 <include name="setup-sip-communicator.exe"/>
             </fileset>
         </copy>
