Commited Pin's patch to fix the "java.lang.OutOfMemoryError: java heap space" error that may appear on some systems at compilation time.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3540 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -205,7 +205,7 @@
         <!--internal-target- compiles the entire project source tree -->
         <javac classpathref="compile.class.path" debug="true"
             deprecation="true" destdir="${dest}" nowarn="false"
-            source="1.5" target="1.5">
+            source="1.5" target="1.5" memoryMaximumSize="400M" fork="true">
             <src path="${src}"/>
             <src path="${src2}"/>
             <include name="**/*.java" />
