--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -97,6 +97,13 @@
     <target name="build-installation-generic"
             depends="clean-install-generic,define-izpack-task,version">
                 
+        <propertyfile file="${generic.app.dir}/versionupdate.properties" 
+            comment="Last Build Version">
+            <entry  key="last_version" value="${sip-communicator.version}"/>
+            <entry  key="download_link" 
+                    value="http://download.sip-communicator.org/nightly/generic/${package.name}-${sip-communicator.version}.jar"/>
+        </propertyfile>
+                
         <filter token="VERSION" value="${sip-communicator.version}" />
         <filter token="BUILDDATE" value="${build.date}" />
         <filter token="PKG_NAME" value="${package.name}" />
@@ -146,6 +153,8 @@
         <propertyfile file="${linux.app.dir}/versionupdate.properties" 
             comment="Last Build Version">
             <entry  key="last_version" value="${sip-communicator.version}"/>
+            <entry  key="download_link" 
+                    value="http://download.sip-communicator.org/nightly/linux/${package.name}-${sip-communicator.version}-linux.bin"/>
         </propertyfile>
                 
         <filter token="VERSION" value="${sip-communicator.version}" />
@@ -226,7 +235,7 @@
             comment="Last Build Version">
             <entry  key="last_version" value="${sip-communicator.version}"/>
             <entry  key="download_link" 
-                    value="http://download.sip-communicator.org/nightly/windows/"/>
+                    value="http://download.sip-communicator.org/nightly/windows/${package.name}-${sip-communicator.version}.exe"/>
         </propertyfile>
                 
         <filter token="VERSION" value="${sip-communicator.version}" />
@@ -346,7 +355,7 @@
       <echo file="${macosx.resrc.dir}/felix.client.run.properties"
             append="true">felix.auto.start.70= reference:file:sc-bundles/growlnotification.jar
       </echo>
-
+      
       <!-- We copy macosx-specific bundles from
            sc-bundles/os-specific/macosx to sc-bundles -->
       <copy todir="${bundles.dest}">
@@ -402,6 +411,8 @@
                       files="logging.properties"/>
         <javafilelist dir="${macosx.resrc.dir}"
                       files="felix.client.run.properties"/>
+        <javafilelist dir="${macosx.resrc.dir}"
+                      files="versionupdate.properties"/>
       </jarbundler>
       <mkdir dir="${macosx.app.dir}/${application.name}.app/Contents/Resources/Java/log"/>
     </target>
@@ -415,7 +426,7 @@
             comment="Last Build Version">
             <entry  key="last_version" value="${sip-communicator.version}"/>
             <entry  key="download_link" 
-                    value="http://download.sip-communicator.org/nightly/macosx/"/>
+                    value="http://download.sip-communicator.org/nightly/macosx/${package.name}-${sip-communicator.version}.dmg"/>
       </propertyfile>
                 
       <property name="macosx.dmg.name"
@@ -486,6 +497,13 @@
             if="dpkg.build.present"
             description="Create a .deb package for Debian (needs dpkg utilities)">
 
+      <propertyfile file="${debian.dir}/versionupdate.properties" 
+            comment="Last Build Version">
+            <entry  key="last_version" value="${sip-communicator.version}"/>
+            <entry  key="download_link" 
+                    value="http://download.sip-communicator.org/nightly/debian/${package.name}_${sip-communicator.version}_i386.deb"/>
+      </propertyfile>
+                
       <!-- Prepare the changelog file for the version number -->
       <copy file="${inst.resrc}/debian/changelog.tmpl"
           tofile="${inst.resrc}/debian/changelog"
