Fixing cc-build, add recently added media manifest packages to system packages
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3587 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -6,6 +6,7 @@
 org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing; \
  javax.swing.event; \
+ javax.swing.border; \
  javax.swing.table; \
  javax.swing.text; \
  javax.imageio;\
@@ -15,6 +16,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  org.xml.sax.ext; \
  sun.misc; \
  sun.security.action; \
+ javax.crypto; \
  javax.xml.parsers;\
  org.apache.xml.serialize;\
  javax.xml.transform;\
