echo the name of selected single test
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3609 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -385,6 +385,7 @@
         <!--internal-target- prepare to run a single Service Impl Compatibility Kit -->
         <!-- extract the simple Test class name. -->
         <basename property="simple.test.names" file="${test.name}"/>
+        <echo message="single test prepared: ${simple.test.names}" />        
     </target>
 
     <!--internal-target- prepare to run all known Service Impl Compatibility Kit -->
