Proper application name in dialog informing for new updates
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3611 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1619,6 +1619,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/plugin/updatechecker" />
             <zipfileset dir="${resources}/languages/plugin/updatechecker"
                 prefix="resources/languages/plugin/updatechecker"/>
+            <zipfileset dir="${resources}" includes="application.properties"
+                prefix="resources"/>
         </jar>
     </target>
     
