--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -115,8 +115,9 @@ felix.auto.start.60= \
  reference:file:sc-bundles/contactinfo.jar \
  reference:file:sc-bundles/accountinfo.jar \
  reference:file:sc-bundles/chatalerter.jar \
- reference:file:sc-bundles/shutdown.jar
-
+ reference:file:sc-bundles/shutdown.jar \
+ reference:file:sc-bundles/statusupdate.jar \
+ 
 # Uncomment the following lines if you want to run the architect viewer
 # bundle.
 #oscar.auto.start.100= \
