- user asked for confirmation when moving contact using the drag&drop - popup menu returned to lightweight - try to solve several problems on Mac (flicker problem, drop down selection problem) - info button enhancements - resizing issues
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3619 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/impl/gui/utils/images.properties
+++ b/src/net/java/sip/communicator/impl/gui/utils/images.properties
@@ -186,3 +186,4 @@ MAIN_WINDOW_BACKGROUND=resources/images/impl/gui/common/mainWindowBackground.png
 TOOL_BAR_BACKGROUND=resources/images/impl/gui/common/toolbarBackground.png
 MENU_BACKGROUND=resources/images/impl/gui/common/menuBackground.png
 WINDOW_TITLE_BAR=resources/images/impl/gui/common/windowTitleBarBackground.png
+ABOUT_WINDOW_BG=resources/images/plugin/branding/aboutWindowBackground.png
