--- a/build.xml
+++ b/build.xml
@@ -1100,6 +1100,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/impl/gui"/>
             <zipfileset dir="${resources}/images/logo"
                 prefix="resources/images/logo"/>
+            <zipfileset dir="${resources}/images/plugin/branding"
+                prefix="resources/images/plugin/branding"/>
             <zipfileset dir="${resources}/images/impl/gui"
                 prefix="resources/images/impl/gui"/>
             <zipfileset dir="${resources}/styles"
@@ -1587,7 +1589,7 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources/images/plugin/contactinfo"/>
         </jar>
     </target>
-    
+
     <!-- BUNDLE-PLUGIN-CHATALERTER -->
     <target name="bundle-plugin-chatalerter">
         <!-- Creates a bundle for the plugin Chat Alerter.-->
