--- a/src/net/java/sip/communicator/impl/gui/utils/images.properties
+++ b/src/net/java/sip/communicator/impl/gui/utils/images.properties
@@ -186,3 +186,4 @@ MAIN_WINDOW_BACKGROUND=resources/images/impl/gui/common/mainWindowBackground.png
 TOOL_BAR_BACKGROUND=resources/images/impl/gui/common/toolbarBackground.png
 MENU_BACKGROUND=resources/images/impl/gui/common/menuBackground.png
 WINDOW_TITLE_BAR=resources/images/impl/gui/common/windowTitleBarBackground.png
+WINDOW_TITLE_BAR_BG=resources/images/impl/gui/common/windowTitleBar.png
