SC now runs on Vista 64 Bit and other Windows systems without javaw.exe in the path. Additionally also old VMs can be the standard-VM, if a Java 5/6 Runtime is present in the system. .exe created with JSmooth
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3631 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/windows/launcher.ini
+++ b/resources/install/windows/launcher.ini
@@ -1,5 +1,5 @@
 jar = sip-communicator-windows.jar
-download = http://java.sun.com/j2se/1.4.2/download.html
+download = http://www.java.com/download/
 
 [win32]
 jre = jre/jre-windows.exe
