--- a/build.xml
+++ b/build.xml
@@ -607,7 +607,8 @@
         bundle-plugin-msnaccregwizz,bundle-plugin-sipaccregwizz,
         bundle-plugin-yahooaccregwizz,bundle-plugin-aimaccregwizz,
         bundle-version,bundle-version-impl,bundle-shutdown,
-        bundle-growlnotification,bundle-audionotifier,bundle-plugin-branding,
+        bundle-growlnotification,bundle-sparkle,
+        bundle-audionotifier,bundle-plugin-branding,
         bundle-systray,bundle-browserlauncher,bundle-gibberish,
         bundle-gibberish-slick,bundle-plugin-gibberishaccregwizz,
         bundle-plugin-extended-callhistory-search,
@@ -1295,6 +1296,16 @@ javax.swing.event, javax.swing.border"/>
             manifest="${src}/net/java/sip/communicator/impl/growlnotification/growlnotification.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/growlnotification"
                 prefix="net/java/sip/communicator/impl/growlnotification" />
+        </jar>
+    </target>
+
+    <!--BUNDLE-SPARKLE-->
+    <target name="bundle-sparkle">
+        <!-- Creates a bundle for the sparkle activator plugin.-->
+        <jar compress="false" destfile="${bundles.dest.mac}/sparkle.jar"
+            manifest="${src}/net/java/sip/communicator/impl/sparkle/sparkle.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/impl/sparkle"
+                prefix="net/java/sip/communicator/impl/sparkle" />
         </jar>
     </target>
 
