Added a new label used by sparkle. This label should actually be set to the build number when compiling a macosx package. If not set, sparkle is not activated in the built package.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3637 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -371,9 +371,9 @@
       <!-- Sparkle needs the build number. If it is not 
            available, we use the normal build label -->
       <condition property="sparkle.build"
-                 value="${label}"
+                 value="${sparkle}"
                  else="${build.label}">
-          <isset property="label"/>
+          <isset property="sparkle"/>
       </condition>
 
       <!-- This creates the .app for MacOSX -->
@@ -427,10 +427,10 @@
     </target>
 
     <!-- Create a MacOSX application package with Sparkle support.
-         Executed only if the label property is set, i.e. if the 
+         Executed only if the sparkle label property is set, i.e. if the 
          package is built from CruiseControl -->
     <target name="macosx-sparkle" depends="macosx"
-            if="label"
+            if="sparkle"
             description="Create an .app package for MACOSX with Sparkle support">
 	  
       <!-- Add the sparkle bundle path in the felix.client.run.properties file -->
