Automatically check for updates at startup with sparkle on MacOSX.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3638 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -447,7 +447,7 @@
 	  <replace file="${macosx.app.dir}/${application.name}.app/Contents/Info.plist">
         <replacetoken><![CDATA[<key>CFBundleName</key>]]></replacetoken>
         <replacevalue><![CDATA[<key>SUCheckAtStartup</key>
-    <string>false</string>
+    <string>true</string>
     <key>SUFeedURL</key>
     <string>http://download.sip-communicator.org/nightly/macosx/sparkle/updates.xml</string>
     <key>SUShowReleaseNotes</key>
