--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -14,6 +14,7 @@
     <classpathentry kind="lib" path="lib/installer-exclude/JainSipApi1.2.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/JainSipRi1.2.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/jcalendar-1.3.2.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/jdic_misc.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/jdom.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/jmf.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/jml-1.0b2.jar"/>
