--- a/resources/colors/colorResources.properties
+++ b/resources/colors/colorResources.properties
@@ -120,3 +120,6 @@ logoBarBackground=FFFFFF
 
 # Main tool bar text foreground
 toolBarForeground=FFFFFF
+
+# Initial account registration protocol panel background.
+accountRegistrationBackground=D1D4E1
