--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -111,6 +111,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/rssaccregwizz.jar \
  reference:file:sc-bundles/zeroconfaccregwizz.jar \
  reference:file:sc-bundles/ircaccregwizz.jar \
+ reference:file:sc-bundles/simpleaccreg.jar \
  reference:file:sc-bundles/contacteventhandler.jar \
  reference:file:sc-bundles/contactinfo.jar \
  reference:file:sc-bundles/accountinfo.jar \
