Revert adding login.properties to swingui.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3664 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1109,6 +1109,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources/colors"/>
             <zipfileset dir="${resources}" includes="application.properties"
                 prefix="resources"/>
+            <zipfileset dir="${resources}" includes="login.properties"
+                prefix="resources"/>
             <zipfileset dir="${resources}" includes="lookandfeel.properties"
                 prefix="resources"/>
             <zipfileset dir="${resources}/size" includes="size.properties"
