--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -81,7 +81,8 @@ felix.auto.start.50= \
  reference:file:sc-bundles/protocol-rss.jar \
  reference:file:sc-bundles/protocol-zeroconf.jar \
  reference:file:sc-bundles/protocol-irc.jar \
- reference:file:sc-bundles/meta-cl.jar
+ reference:file:sc-bundles/meta-cl.jar \
+ reference:file:sc-bundles/protocol-dict.jar
 
 felix.auto.start.60= \
  reference:file:sc-bundles/history.jar \
@@ -118,6 +119,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/chatalerter.jar \
  reference:file:sc-bundles/shutdown.jar \
  reference:file:sc-bundles/statusupdate.jar \
+ reference:file:sc-bundles/dictaccregwizz.jar
  
 # Uncomment the following lines if you want to run the architect viewer
 # bundle.
