[4/4] Adding DICT protocole and wizzard (corrected version).
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3676 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -621,6 +621,7 @@
         bundle-plugin-accountinfo,bundle-plugin-chatalerter,
     	bundle-plugin-statusupdate,
         bundle-updatecheckplugin,
+        bundle-dict,bundle-plugin-dictaccregwizz,
         bundle-plugin-simpleaccreg"/>
 
     <!--BUNDLE-HISTORY-->
