Moving folder for storing config on MacOS to user.home/Library......
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3691 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -127,8 +127,8 @@ felix.auto.start.60= \
 # file:lib/bundle/architectureviewer1.1.jar
 
 #Specify the directory where oscar should deploy its bundles
- felix.cache.profiledir=sip-communicator.bin
-#felix.cache.profiledir=${user.home}/.sip-communicator/profiledir
+#felix.cache.profiledir=sip-communicator.bin
+felix.cache.profiledir=${user.home}/.sip-communicator/sip-communicator.bin
 
 felix.startlevel.framework=100
 felix.startlevel.bundle=100
