A grow box is now displayed in the bottom right cornet of the MacOSX Gui.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3713 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -398,7 +398,7 @@
 
         <javaproperty name="apple.laf.useScreenMenuBar" value="true"/>
         <javaproperty name="apple.awt.brushMetalRounded" value="true"/>
-        <javaproperty name="apple.awt.showGrowBox" value="false"/>
+        <javaproperty name="apple.awt.showGrowBox" value="true"/>
         <javaproperty name="java.library.path"
                       value="$JAVAROOT/lib/native/mac:${system.DYLD_LIBRARY_PATH}"/>
 
